--- a/src/app/modules/home/editor-codigo/editor-codigo.component.html
+++ b/src/app/modules/home/editor-codigo/editor-codigo.component.html
@@ -1,1 +1,1 @@
-<div class="border-2 border-blue-400 rounded-lg" #editor [ngClass]="classes"></div>
+<div class="border-2 border-blue-400" #editor [ngClass]="classes"></div>
