006: adicionando checkboxs e criando module shared do material

--- a/src/app/modules/home/google-maps/google-maps.component.html
+++ b/src/app/modules/home/google-maps/google-maps.component.html
@@ -5,6 +5,17 @@
         </form>
 
         <!-- TODO: Adicionar checkboxs -->
+        <ng-container *ngFor="let polygon of polygonsLatLng">
+            <mat-checkbox
+                color="primary"
+                [checked]="true"
+                [class]="''"
+                [disabled]="false"
+                (change)="ativaDesativaPolygon($event, polygon.nome)"
+                class="text-xs">
+                {{ polygon.nome }}
+            </mat-checkbox>
+        </ng-container>
 
         <google-map
             height="100%"
