--- a/src/app/modules/home/google-maps/google-maps.component.html
+++ b/src/app/modules/home/google-maps/google-maps.component.html
@@ -5,17 +5,19 @@
         </form>
 
         <!-- TODO: Adicionar checkboxs -->
-        <ng-container *ngFor="let polygon of polygonsLatLng">
-            <mat-checkbox
-                color="primary"
-                [checked]="true"
-                [class]="''"
-                [disabled]="false"
-                (change)="ativaDesativaPolygon($event, polygon.nome)"
-                class="text-xs">
-                {{ polygon.nome }}
-            </mat-checkbox>
-        </ng-container>
+        <div class="absolute bottom-0 z-50 flex flex-col gap-1 bg-blue-500 px-4 py-2 rounded-2xl" *ngIf="polygonsLatLng.length">
+            <ng-container *ngFor="let polygon of polygonsLatLng">
+                <mat-checkbox
+                    color="primary"
+                    [checked]="true"
+                    [class]="''"
+                    [disabled]="false"
+                    (change)="ativaDesativaPolygon($event, polygon.nome)"
+                    class="text-xs">
+                    {{ polygon.nome }}
+                </mat-checkbox>
+            </ng-container>
+        </div>
 
         <google-map
             height="100%"
