013: Lazy loading api key

--- a/src/app/modules/home/google-maps/google-maps.component.html
+++ b/src/app/modules/home/google-maps/google-maps.component.html
@@ -1,6 +1,6 @@
 <div class="flex w-full h-[100vh]">
     <div id="maps" class="w-2/3 h-full relative last:w-full">
-        <form class="absolute z-50 right-4 bg-blue-500">
+        <form class="absolute z-50 right-4 bg-blue-500"> <!-- top-4 rounded -->
             <label
                 for="arquivo"
                 class="text-base font-bold text-white inline-block rounded p-3"
