--- a/src/app/modules/home/google-maps/google-maps.component.html
+++ b/src/app/modules/home/google-maps/google-maps.component.html
@@ -1,5 +1,5 @@
 <div class="relative flex w-full h-[100vh]">
-    <div class="config absolute right-6 top-4 z-10">
+    <div class="config absolute right-6 top-6 z-20">
         <button
             class="text-white"
             [matMenuTriggerFor]="menu"
@@ -9,22 +9,28 @@
         </button>
     </div>
     <div id="maps" class="w-2/3 h-full relative last:w-full">
-        <form class="absolute z-50 right-4 bg-cyan-500 rounded">
-            <!-- top-4 rounded -->
-            <label
-                for="arquivo"
-                class="text-base font-bold text-white inline-block rounded p-3"
-            >
-                Clique aqui para inserir um arquivo
-            </label>
-            <input
-                id="arquivo"
-                class="arquivo w-[0.1px] h-[0.1px] opacity-0 overflow-hidden -z-1"
-                type="file"
-                (change)="arquivoSelecionado($event)"
-                #fileUpload
-            />
-        </form>
+        <div class="flex absolute z-50 right-4 bg-cyan-500 rounded">
+            <form class="">
+                <!-- top-4 rounded -->
+                <label
+                    for="arquivo"
+                    class="text-base font-bold text-white inline-block rounded p-3"
+                >
+                    Abrir arquivo
+                </label>
+                <input
+                    id="arquivo"
+                    class="arquivo w-[0.1px] h-[0.1px] opacity-0 overflow-hidden -z-1"
+                    type="file"
+                    (change)="arquivoSelecionado($event)"
+                    #fileUpload
+                />
+            </form>
+            <div class="w-[2px] h-full bg-white"></div>
+            <div class="text-base font-bold text-white inline-block rounded p-3" [matMenuTriggerFor]="salvar">
+                Salvar como
+            </div>
+        </div>
 
         @if (abrirMinizarCheckboxs) {
         <div
@@ -113,7 +119,7 @@
             }
         </google-map>
     </div>
-    <div class="bg-red-500 h-full w-1/3">
+    <div class="relative bg-red-500 h-full w-1/3">
         <app-editor-codigo [classes]="'w-full h-full'"></app-editor-codigo>
     </div>
 </div>
@@ -134,5 +140,14 @@
     <button mat-menu-item *ngIf="false">
         <mat-icon>notifications_off</mat-icon>
         <span>Disable alerts</span>
+    </button>
+</mat-menu>
+
+<mat-menu #salvar="matMenu">
+    <button mat-menu-item (click)="salvarArquivoComo(geoJsonEmVizualizacao, 'map.geojson', 'application/geo+json')">
+        <span>GeoJSON</span>
+    </button>
+    <button mat-menu-item disabled (click)="salvarArquivoComo(featureCollectionToKML(geoJsonEmVizualizacao), 'map.kml', 'application/vnd.google-earth.kml+xml')">
+        <span>KML</span>
     </button>
 </mat-menu>
